# DevLearnerAI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  build_codex_switcher_exe.py  build_dev_exe.py  build_exe.py  codex_switcher_main.py  dev_main.py  main.py  pyproject.toml  rebuild_courses.py  rebuild_part1.py  rebuild_part2.py  rebuild_part3.py  rebuild_part4.py  rebuild_part5.py  requirements-dev.txt  requirements.txt  update_cpp_exercises.py  项目说明.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
DevLearnerAI_Package/content/: chapter1.md  full_curriculum.md  tutorial.md
app/: __init__.py  ai_mentor.py  codex_switcher.py  config.py  content_service.py  credentials.py  database.py  demo_data.py  effects.py  highlighter.py  localized_inputs.py  memory_monitor.py  practice_service.py  python_runner.py  reader_dialog.py  styles.py  types.py  window.py
app/ai/: __init__.py  api_client.py  chat_handler.py  markdown_renderer.py  models.py
app/i18n/: __init__.py  en_US.py  zh_CN.py
app/practice/: __init__.py  evaluator.py  exercise_loader.py  models.py  normalizer.py
app/services/: __init__.py  achievement_service.py  base.py  bookmark_service.py  config_service.py  lesson_service.py  mentor_service.py  note_service.py  practice_data_service.py  review_service.py
app/utils/: __init__.py  analytics.py  container.py  data_portability.py  error_handler.py  events.py  logger.py  metrics.py  middleware.py  plugins.py
app/widgets/: __init__.py  achievements.py  algo.py  analytics_view.py  bookmarks.py  code_analyzer.py  dashboard.py  export_import.py  feature_tour.py  hint_system.py  learn.py  learning_path.py  learning_recommendations.py  practice.py  projects.py  setup_checklist.py  welcome_wizard.py
codexgame/: README.md  game.js  index.html  styles.css
content/: chapter2.md  chapter3.md  chapter4.md  chapter5.md
content/algorithms/: algo_arrays_hashing.md  algo_arrays_strings.md  algo_binary_search.md  algo_binary_trees.md  algo_bst.md  algo_complexity.md  algo_complexity_basics.md  algo_dp.md  algo_graph_shortest_path.md  algo_graphs.md  algo_greedy_backtrack.md  algo_hash_tables.md  algo_heaps.md  algo_linked_lists.md  algo_prefix_sum_window.md  algo_sorting.md  algo_stacks_queues.md  algo_tree_bfs_dfs.md  algo_two_pointers.md
content/c/: c_arrays_memory_layout.md  c_arrays_strings.md  c_binary_file_indexer.md  c_callback_qsort_patterns.md  c_cli_tool.md  c_debugging_tools.md  c_dynamic_memory.md  c_enum_state_machine.md  c_file_io.md  c_function_pointers.md  c_functions_arrays.md  c_functions_scope.md  c_header_modules.md  c_linked_list_basics.md  c_linked_lists.md  c_make_build.md  c_memory_bug_patterns.md  c_memory_pool.md  c_mini_libc.md  c_pointer_arithmetic.md  c_pointers.md  c_posix_basics.md  c_preprocessor.md  c_project_complete.md  c_qsort_comparator.md  c_strings_pointers.md  c_structs_unions.md  c_syntax_basics.md  c_undefined_behavior.md
content/cpp/: cpp_abstract_interfaces.md  cpp_build_debug_workflow.md  cpp_concurrency.md  cpp_design_patterns.md  cpp_exception_error.md  cpp_file_io_basics.md  cpp_lambda_functional.md  cpp_map_set.md  cpp_pointers_memory.md  cpp_polymorphism_virtual.md  cpp_raii_smart_pointers.md  cpp_stl_algorithms.md  cpp_syntax_functions.md  cpp_templates_advanced.md
content/csharp/: cs_async.md  cs_auth_security.md  cs_clr_gc.md  cs_collections.md  cs_configuration_options.md  cs_deployment.md  cs_desktop_architecture_notes.md  cs_dictionary_records.md  cs_ef_core.md  cs_generics_delegates.md  cs_interfaces_abstractions.md  cs_linq.md  cs_linq_grouping.md  cs_methods_params.md  cs_minimal_api.md  cs_minimal_api_routing.md  cs_project_complete.md  cs_reflection.md  cs_repository_pattern_intro.md  cs_syntax_basics.md  cs_testing_workflow.md  cs_thinking_setup.md  cs_value_types.md  cs_webapi_intro.md
content/database/: db_aggregation.md  db_backup_recovery.md  db_connection_pool.md  db_crud.md  db_cte_patterns.md  db_explain.md  db_index_design_patterns.md  db_indexes.md  db_joins.md  db_migrations_basics.md  db_mysql.md  db_normalization.md  db_nosql.md  db_postgresql.md  db_postgresql_intro.md  db_project_complete.md  db_reporting_case.md  (+10 more)
docs/: HIGH_ROI_IMPROVEMENTS.md  MATURITY_SCORECARD.md  NEXT_SPRINT.md  PRODUCT_AUDIT.md  QUALITY_AUDIT.md  README.md  SPRINT_REVIEW.md  STRATEGIC_ASSESSMENT.md  accessibility.md  architecture.md  changelog-extended.md  comparison.md  content_expansion_batch2.md  dependency-audit.md  distribution.md  faq.md  features-showcase.md  glossary.md  improvement-plan.md  learning-path.md  maturity-plan.md  performance-budgets.md  release-notes-v1.1.0.md  search-index.md  security-audit.md  skill-tree.md  troubleshooting.md  user-guide.md  内容扩展总表.md
plan/: 五大技术栈高质量学习资源深度评估与分阶段学习路线（截至 2026-04-05）.docx
screenshots/: README.md
scripts/: version_bump.py
styles/: highlighter.py
tests/: conftest.py  test_ai_chat_handler.py  test_ai_models.py  test_ai_package.py  test_api_client_extended.py  test_chart_logic.py  test_chat_handler_extended.py  test_config_extended.py  test_container.py  test_content_parsing_edge_cases.py  test_content_service.py  test_content_service_extended.py  test_credentials.py  test_dashboard_logic.py  test_database.py  test_database_coverage.py  test_database_extended.py  test_database_extra.py  test_database_stress.py  test_demo_data.py  test_edge_cases.py  test_evaluator_extended.py  test_events.py  test_exercise_loader_business.py  test_exercise_loader_extended.py  test_highlighter_business.py  test_highlighter_patterns.py  test_i18n.py  test_integration_ai_flow.py  test_integration_database_flow.py  test_integration_learning_flow.py  test_integration_practice_flow.py  test_markdown_renderer_extended.py  test_markdown_sanitization.py  test_middleware.py  test_normalizer.py  test_plugins.py  test_practice_logic.py  test_practice_service.py  test_practice_service_extended.py  (+7 more)
tools/: expand_content_stage2.py
(+218 files in other folders)
