[project]
name = "devlearner-ai"
version = "1.1.0"
description = "AI 驱动的桌面编程学习平台 | Python / PyQt5 / SQLite"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DevLearner Team" },
]
keywords = ["learning", "python", "ai", "education", "pyqt5"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "PyQt5>=5.15",
    "mistune>=3.0",
    "keyring>=24.0",
]

[project.gui-scripts]
devlearner-ai = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.4",
    "coverage>=7.0",
    "pyinstaller>=6.0",
    "pytest-benchmark>=4.0",
]
build = [
    "pyinstaller>=6.0",
]

# ---------------------------------------------------------------------------
# Ruff  -- linter + formatter (replaces flake8 + isort + black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E402",   # module level import not at top -- logger-before-import pattern is intentional
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator -- sometimes less readable
    "SIM102", # nested if can be combined -- security-critical code prefers explicit nesting
    "SIM105", # contextlib.suppress -- except blocks may need logging or side-effects
    "N801",   # class name should be PascalCase -- DATA_BLOB matches Win32 API struct name
    "N802",   # function name should be lowercase -- PyQt5 override methods MUST be camelCase
    "N815",   # mixedCase variable in class scope -- PyQt5 signal names are camelCase by convention
    "N999",   # invalid module name -- locale modules (en_US, zh_CN) use underscore naming
    "UP006",  # use type[] instead of Type[] -- requires Python 3.12+ for runtime use
    "UP035",  # deprecated import -- needed for Python 3.9 compatibility
    "UP045",  # use X | Y instead of Optional -- requires Python 3.10+
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
norecursedirs = ["tests/benchmark"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
    "app/widgets/*",
    "app/window.py",
    "app/ai_mentor.py",
    "app/reader_dialog.py",
    "app/highlighter.py",
    "app/effects.py",
    "app/localized_inputs.py",
    "app/codex_switcher.py",
    "app/styles.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

# ---------------------------------------------------------------------------
# Mypy  -- static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PyQt5.*",
    "mistune.*",
    "keyring.*",
    "psutil.*",
]
ignore_missing_imports = true
